# AutoBudget-Server

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: health.py
app/api/v1/: api.py  expenses.py
app/core/: config.py  database.py  security.py
app/models/: expense.py
app/schemas/: expense.py
docs/: Dokumentation.md
