[tool.poetry]
name = "autobudget"
version = "0.1.0"
description = "Ein Python-Tool zur Verwaltung Ihrer Finanzen"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
pydantic = "^2.10.3"
sqlalchemy = "^2.0.36"
psycopg = {extras = ["binary"], version = "^3.2.3"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"  # für FastAPI-Tests

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
